# AION

./: .env.example  .gitignore  Dockerfile  Functional and Technical Specification Document.md  Makefile  N8N-MCP-CLIENT-GUIDE.md  NEXT_STEPS.md  README.md  docker-compose.yml  pyproject.toml  test_all_tools.py  test_calculation.json  test_entity_chat.json  test_function_calling.py  test_kg_query.json  test_kg_query2.json  test_manual_mcp.py  test_mcp_jsonrpc.py  test_n8n_mcp.py  test_personal_info.json  test_speed.json  test_tool_choice_none.py
docs/: ARCHITECTURE.md  NEXT_STEPS.md  PROJECT_STRUCTURE.md  SETUP.md  guia-implementacion-calendar-mcp.md
docs/features/: OAUTH_INTEGRATION.md  OBSIDIAN_SYNC.md  PROMPT_MANAGEMENT.md  TOOLS.md
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: advanced-search.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Documents.tsx  KnowledgeBase.tsx  KnowledgeGraph.tsx  Memories.tsx  Prompts.tsx  Settings.tsx
scripts/: check_missing_user_id.py  fix_missing_user_id.py  init_db.py  migrate_prompts.py
scripts/migrations/: 001_create_oauth_tokens_table.sql
src/: main.py
src/application/agents/: __init__.py  obsidian_sync_agent.py
src/application/dtos/: __init__.py  chat_dto.py  document_dto.py  entity_dto.py  memory_dto.py  rag_dto.py
src/application/use_cases/: __init__.py  chat_use_case.py  document_use_cases.py  entity_extraction_use_case.py  entity_query_use_cases.py  memory_use_cases.py  rag_use_case.py
src/config/: settings.py
src/domain/entities/: __init__.py  calendar_event.py  conversation.py  document.py  email.py  graph_entity.py  memory.py  oauth_token.py  sync_state.py  system_prompt.py  tool.py
src/domain/repositories/: __init__.py  conversation_repository.py  document_repository.py  graph_repository.py  memory_repository.py
src/infrastructure/database/: __init__.py  connection.py  conversation_repository_impl.py  models.py  system_prompt_repository.py
src/infrastructure/document_processing/: __init__.py  document_processor.py  text_chunker.py
src/infrastructure/embeddings/: __init__.py  embedding_cache.py  embedding_service.py
src/infrastructure/graph_db/: __init__.py  (+2 more)
src/shared/: exceptions.py  logging.py
tests/manual/: test_calculator_simple.py  test_memory_scroll.py  test_obsidian_sync.py
(+48 files in other folders)
