[tool.poetry]
name = "aion"
version = "1.0.0"
description = "AI Personal Assistant with Long-Term Memory and Knowledge Base"
authors = ["David Buitrago"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
langchain = "^0.3.7"
langchain-community = "^0.3.5"
langchain-openai = "^0.2.9"
qdrant-client = "^1.12.0"
neo4j = "^5.26.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"
tenacity = "^9.0.0"
tiktoken = "^0.8.0"
python-multipart = "^0.0.17"
aiofiles = "^24.1.0"
pygithub = "^2.5.0"
gitpython = "^3.1.43"
cryptography = "^43.0.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
structlog = "^24.4.0"
python-json-logger = "^3.2.1"
greenlet = "^3.2.4"
pypdf2 = "^3.0.1"
duckduckgo-search = "^8.1.1"
google-auth = "^2.36.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.154.0"
msal = "^1.31.1"
msgraph-sdk = "^1.14.0"
beautifulsoup4 = "^4.14.2"
lxml = "^6.0.2"
mcp = "^1.1.2"
httpx-sse = "^0.4.3"
aiohttp-sse-client = "^0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
black = "^24.10.0"
ruff = "^0.7.4"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
ipython = "^8.29.0"
pytest-httpx = "^0.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
